Signed-off-by: ajith kumar <ajithkumar@owcdomain.com>

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ajithkaranam.rentacar"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "661c3802-e94a-48c7-bba9-490c7ca8077d"
+      }
     }
   }
 }
